Add historical data tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 .claude/
+
+# Historical data documentation (local reference only)
+HISTORICAL_DATA_SETUP.md
+IMPLEMENTATION_SUMMARY.md
+QUICKSTART.md
+NEXT_STEPS.md
+README_HISTORICAL.md
+VISUAL_GUIDE.md
+test-historical-data.html
+verify-implementation.sh
